Tooltip - Added fix for different toggle text lengths

--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/10--tooltip-button.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/10--tooltip-button.twig
@@ -8,7 +8,7 @@
       size: "medium"
     },
     toggle: {
-      text: "Trigger #1",
+      text: "Trigger #1 Open",
       name: "close-open"
     }
   },
@@ -22,13 +22,13 @@
 {% include "@bolt-components-tooltip/tooltip.twig" with {
   trigger: {
     type: "button",
-    text: "Longer Trigger #2",
+    text: "Trigger #2",
     icon: {
       name: "info-open",
       size: "medium"
     },
     toggle: {
-      text: "Longer Trigger #2",
+      text: "Trigger #2 Open",
       name: "close-open"
     }
   },
