update button to handle transform variations

--- a/packages/components/bolt-button/src/button.scss
+++ b/packages/components/bolt-button/src/button.scss
@@ -59,6 +59,21 @@ bolt-button {
 
 
 
+/** Button Text Transform Variations **/
+.c-bolt-button--uppercase {
+  text-transform: uppercase;
+}
+
+.c-bolt-button--lowercase {
+  text-transform: lowercase;
+}
+
+.c-bolt-button--capitalize {
+  text-transform: capitalize;
+}
+
+
+
 /** Button Size Variations **/
 .c-bolt-button,
 .c-bolt-button--medium {
