--- a/packages/components/bolt-form/src/form.scss
+++ b/packages/components/bolt-form/src/form.scss
@@ -247,9 +247,9 @@ $bolt-input-transition: $bolt-transition;
 }
 
 .c-bolt-inline-label {
-  @include bolt-padding-left(medium);
   @include bolt-form-mobile-font-size;
 
+  padding-left: 1.5em;
   display: inline-block;
   position: relative;
   cursor: pointer;
@@ -262,10 +262,10 @@ $bolt-input-transition: $bolt-transition;
   }
 
   &:before {
-    top: 0.3rem;
+    top: 0.3em;
     left: 0;
-    width: 1rem;
-    height: 1rem;
+    width: 1em;
+    height: 1em;
     content: '';
     border-color: $bolt-inline-label-input-border-color;
     border-style: $bolt-inline-label-input-border-style;
@@ -286,10 +286,10 @@ $bolt-input-transition: $bolt-transition;
   }
 
   &:after {
-    top: 0.4rem;
-    left: 0.375rem;
-    width: calc(1rem - 0.675rem);
-    height: calc(1rem - 0.325rem);
+    top: 0.4em;
+    left: 0.375em;
+    width: calc(1em - 0.675em);
+    height: calc(1em - 0.325em);
     border-color: $bolt-inline-label-input-color;
     border-style: solid;
     border-width: 0 2px 2px 0;
@@ -300,14 +300,14 @@ $bolt-input-transition: $bolt-transition;
 .c-bolt-inline-label--radio {
   &:before,
   &:after {
-    border-radius: 1rem;
+    border-radius: 1em;
   }
 
   &:after {
-    top: calc(0.3rem + 3px);
+    top: calc(0.3em + 3px);
     left: 3px;
-    width: calc(1rem - 6px);
-    height: calc(1rem - 6px);
+    width: calc(1em - 6px);
+    height: calc(1em - 6px);
     background-color: $bolt-inline-label-input-color;
     transform: scale(0.1);
   }
@@ -366,7 +366,8 @@ $bolt-input-transition: $bolt-transition;
 }
 
 .c-bolt-input-icons {
-  @include bolt-padding(0.65rem small 0.35rem 0);
+  @include bolt-form-mobile-font-size;
+  @include bolt-padding(0.65em small 0.35em 0);
 
   position: absolute;
   top: 1px;
