Importing tools before using them

--- a/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
+++ b/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
@@ -3,6 +3,8 @@
 /// @author Mike Mai
 ////
 
+@import "../../02-tools/tools-breakpoint/_tools-breakpoint.scss";
+@import "../../02-tools/tools-px-to-rem/_tools-px-to-rem.scss";
 
 $bolt-font-size--small-bp: bolt-rem(bolt-breakpoint(xxsmall));
 $bolt-font-size--medium-bp: bolt-rem(bolt-breakpoint(medium));
