--- a/apps/pattern-lab/src/_patterns/02-components/image/15-image-source-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/15-image-source-variations.twig
@@ -21,6 +21,13 @@
   alt: "Bill Murray",
 } only %}
 
+<h4>Src only that won't be found in <code>bolt.data.images</code> and not lazy loaded</h4>
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/placeholders/500x500-480.jpg",
+  alt: "Bill Murray",
+  lazyload: false,
+} only %}
+
 <h4>Src and srcset that won't be found in <code>bolt.data.images</code></h4>
 {% include '@bolt-components-image/image.twig' with {
   src: "/pattern-lab/images/placeholders/500x500-480.jpg",
