Share -- Updated param name

--- a/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
@@ -6,7 +6,7 @@
       email: true,
       copy: true,
       visibility: 'visible',
-      flatLayout: false
+      inline: false
     } only %}
   {% endverbatim %}
 {% endset %}
